faq card box shaddow and title width spacing fixed

--- a/src/scss/layout/_faq.scss
+++ b/src/scss/layout/_faq.scss
@@ -110,12 +110,13 @@
 
       &:not(.collapsed) {
         color: color(g);
-        box-shadow: none;
+        // box-shadow: none;
         border-bottom-left-radius: 0px !important;
         border-bottom-right-radius: 0px !important;
         border-color: transparent !important;
         border-bottom-color: #ebeef7 !important;
         background-color: #fff;
+        box-shadow: 0px -40px 80px 0px #001a661a !important;
 
         .icon {
           color: color(g);
